--- a/2_pamoka/css/style.css
+++ b/2_pamoka/css/style.css
@@ -3,4 +3,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    height: 50vh;
+}
+
+img {
+    cursor: pointer;
 }
