--- a/1_pamoka/css/style.css
+++ b/1_pamoka/css/style.css
@@ -1,4 +1,4 @@
-/* EXERCISE 2 */
+/* EXERCISE 2 la */
 i {
     color: rgb(182, 121, 7);
 }
@@ -25,4 +25,8 @@ i {
 /* EXERCISE 6 */
 #code-image {
     width: 50%;
+}
+
+.btn-width {
+    width: 100px;
 }
